# email-telegram-notifier

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: update.yml
src/: main.py  telegram.py
src/settings/: __init__.py  imap.py
src/templates/: message.j2
