[project]
name = "clean-architecture-boilerplate"
version = "0.1.0"
description = "Just a simple boilerplate to create a new project"
authors = [
    {name = "Khiem Doan", email = "doankhiem.crazy@gmail.com"},
]

readme = "README.md"
license = {text = "GPL-3"}

requires-python = ">=3.12"

dependencies = [
    "tzdata==2024.2",
    "loguru==0.7.2",
    "pydantic==2.10.2",
    "pydantic-settings==2.6.1",
    "IMAPClient==3.0.1",
    "Jinja2==3.1.4",
    "httpx[http2]==0.28.0",
]

[tool.pdm.dev-dependencies]
testing = [
    "pytest",
    "pytest-asyncio",
    "icecream",
    "reloadium",
]
linting = [
    "isort",
    "ruff",
]

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
