[project]
name = "email-telegram-notifier"
version = "0.1.0"
description = "Small utility helps you quickly know when have a new email."
authors = [
    {name = "Khiem Doan", email = "doankhiem.crazy@gmail.com"},
]

readme = "README.md"
license = {text = "GPL-3"}

requires-python = ">=3.12"

dependencies = [
    "tzdata==2025.2",
    "loguru==0.7.3",
    "pydantic==2.11.4",
    "pydantic-settings==2.9.1",
    "IMAPClient==3.0.1",
    "Jinja2==3.1.6",
    "httpx[http2]==0.28.1",
]

[dependency-groups]
tools = [
]
testing = [
    "pytest",
    "pytest-asyncio",
    "icecream",
    "reloadium",
]
linting = [
    "isort",
    "ruff",
]

[tool.isort]
line_length = 120

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
